# soroban-derive-contracts

./: Cargo.toml  README.md
hello_token_contract/src/: test.rs
hello_world/: Cargo.toml
hello_world/src/: lib.rs
token_macro/: Cargo.toml
token_macro/src/: lib.rs
token_macro/token_macro_derive/: Cargo.toml
token_macro/token_macro_derive/src/: lib.rs  simple_token.rs
